--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,10 +4,18 @@
         "es2021": true,
         "node": true
     },
-    "extends": "eslint:recommended",
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 12
     },
+    "plugins": [
+        "@typescript-eslint"
+    ],
     "rules": {
+			
     }
 }
