--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "lint": "yarn run eslint .",
-    "pretty": "yarn run prettier --write ."
+    "pretty": "yarn run prettier --write .",
+		"compile": "tsc"
   },
   "repository": {
     "type": "git",
