--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eris-components",
   "version": "0.0.1",
   "description": "Eris Components allows you to use Discord buttons and other components interacting with the Discord API.",
-  "main": "dist/index.js",
+  "main": "lib/index.js",
   "directories": {
     "src": "src",
     "test": "test"
