--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-	"tabWidth": 2,
-	"useTabs": true,
+	"tabWidth": 4,
+	"useTabs": false,
 	"semi": true,
 	"singleQuote": true,
 	"bracketSpacing": true,
