--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "test": "test"
   },
   "scripts": {
-    "start": "node index.js",
     "test": "jest",
     "build": "tsc"
   },
@@ -35,6 +34,8 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.3",
     "@types/prettier": "^2",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
     "eslint": "^7.30.0",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
