--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: yarn set version berry
       - run: yarn install --immutable
-      - run: yarn lint
+      - run: yarn run eslint .
   prettier:
     runs-on: ubuntu-latest
     strategy:
@@ -38,7 +38,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: yarn set version berry
       - run: yarn install --immutable
-      - run: yarn prettier --check .
+      - run: yarn run prettier --check .
   test:
     runs-on: ubuntu-latest
     strategy:
