--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
   "devDependencies": {
     "@types/eslint": "^7",
     "@types/jest": "^26.0.24",
+    "@types/jsdoc-to-markdown": "^7",
     "@types/node": "^16.3.3",
     "@types/prettier": "^2",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "eslint": "^7.30.0",
     "jest": "^27.0.6",
+    "jsdoc-to-markdown": "^7.0.1",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5"
   }
