--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "eris-components",
   "version": "0.0.1",
   "description": "Eris Components allows you to use Discord buttons and other components interacting with the Discord API.",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "directories": {
     "src": "src",
     "test": "test"
   },
   "scripts": {
-    "test": "jest",
+    "test": "node test/test.js",
     "build": "tsc"
   },
   "keywords": [
