--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eris-components",
-  "version": "0.0.3",
+  "version": "1.0.2",
   "description": "Eris Components allows you to use Discord buttons and other components interacting with the Discord API.",
   "main": "src/index.js",
   "directories": {
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "node test/test.js",
+    "test": "node --trace-warnings test/test.js",
     "build": "tsc",
     "lint": "yarn eslint .",
     "fix": "yarn eslint --fix .",
@@ -29,18 +29,18 @@
   "author": "tnfAngel, Jakemate977",
   "license": "ISC",
   "dependencies": {
-    "eris": "^0.15.1"
+    "eris": "^0.16.1"
   },
   "devDependencies": {
-    "@types/eslint": "^7",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.3.3",
+    "@types/eslint": "^8",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.10",
     "@types/prettier": "^2",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
-    "eslint": "^7.30.0",
-    "jest": "^27.0.6",
-    "prettier": "^2.3.2",
-    "typescript": "^4.3.5"
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.3.0",
+    "jest": "^27.3.1",
+    "prettier": "^2.5.0",
+    "typescript": "^4.5.2"
   }
 }
